<resources>
    <item name="home_phone" type="id" />
    <item name="home_address" type="id" />
    <item name="enter_emergency_name" type="id" />
    <item name="emergency_contact" type="id" />
    <item name="save_button" type="id" />
    <string name="app_name">E-Contact</string>
    <string name="format_first_middle_last">Format: First Middle Last</string>
    <string name="name">Name</string>
    <string name="razin_bin_issa">Razin Bin Issa</string>
    <string name="home_address">Home Address</string>
    <string name="format_house_street_city_district">Format: House Street City, District</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_emergency_number">Enter Emergency Number</string>
    <string name="update_emergency_contact">Update Emergency Contact</string>
    <string name="update_user_information">Update User Information</string>
    <string name="format_blood">Format: A+ A- B+ B- AB+ AB- O+ O-</string>
    <string name="select_blood">Blood Type</string>
    <string name="enter_number">Enter Number</string>
    <string name="formate_name">Formate: Name</string>
    <string name="format_nnnn_11_digit_number">Format: NNNN(11 Digit Number)</string>
    <string name="enter_name">Enter Name</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="hospital">Hospital</string>
    <string name="sos">SOS</string>
    <string name="fire_station">Fire Station</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="enter_location">Enter Location</string>
    <string name="guest_phone_number">Guest Phone Number</string>
    <string name="preview">Preview</string>
    <string name="home">Home</string>
    <string name="device_owner">Device Owner</string>
    <string name="guest">Guest</string>

    <string name="blood_type">Blood Type</string>
    <string name="number">Number</string>
    <string name="location">Location</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="guest_name">Guest Name</string>

    <string name="enter_emergency_name">Enter Emergency Name</string>
    <string name="enter_home_address">Enter Home Address</string>
    <string name="home_phone">Home Phone</string>
    <string name="enter_home_phone_number">Enter Home Phone Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission" />
    <string name="text_location_permission" />
    <string name="ok" />
    <string name="google_maps_key">AIzaSyAVo5L9azJhasVtjsYMTWRd620eOKPT1o8</string>
    <string name="maps_api_key">AIzaSyAVo5L9azJhasVtjsYMTWRd620eOKPT1o8</string>
    <string-array name="blood_array">
        <item>Blood Type</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>O-</item>
        <item>O+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
</resources>