<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="343dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/format_emergency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formate_name"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#989797" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/number"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_number"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/format_emergency_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_nnnn_11_digit_number"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/updateEM_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:onClick="onClick"
            android:text="@string/update_emergency_contact" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:onClick="onClick"
            android:text="@string/cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>