<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <ScrollView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dip" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/format_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:text="@string/format_first_middle_last" />
            </LinearLayout>
            <EditText
                android:id="@+id/home_name_field"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/home_address"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/format_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/format_house_street_city_district"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/home_address_field"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_home_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/home_phone"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/format_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/format_nnnn_11_digit_number"
                    android:textSize="11sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/home_phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_home_phone_number"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/blood_type"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"/>

                <!-- TextView
                android:id="@+id/format_blood"
                android:text="@string/format_blood"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="11sp"/> -->
            </LinearLayout>

            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:drawSelectorOnTop="true"
                android:entries="@array/blood_array"
                android:prompt="@string/select_blood" />
            <!--
                    <EditText
                        android:id="@+id/blood_type_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_blood_type"/>
             -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/emergency_contact"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/format_emergency_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/format_first_middle_last" />
            </LinearLayout>

            <EditText
                android:id="@+id/Emergency_contacts_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_emergency_name"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/emergency_contact" />

            <EditText
                android:id="@+id/Emergency_contacts_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_emergency_number"
                android:inputType="phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/format_emergency_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_nnnn_11_digit_number" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:onClick="onClick"
                android:text="@string/save"
                />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:onClick="onClick"
                android:text="@string/cancel"/>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>